Finished user story 7, implemented functionality for returning the average rating for books, and count of reviews for a book instance. These methods were built in the model, and tested in the model_spec.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,5 +18,9 @@
     <% end %>
         <img class="img-thumbnail" src="<%= book.cover_image %>">
       </ul>
+      <ul id="book-rev-stat-<%= book.id %>">
+        <li>Average Rating: <%= book.avg_rating.round(1) %></li>
+        <li>Total Reviews: <%= book.review_count.to_i %></li>
+      </ul>
   <% end %>
 </div>
