Completed all sorting functionality for books index page.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,6 +6,7 @@
   <%= link_to "Highest Page Count", books_path(sort: :pages, order: :desc) %>
   <%= link_to "Lowest Page Count", books_path(sort: :pages, order: :asc) %>
   <%= link_to "Most Reviewed", books_path(sort: :reviews, order: :desc) %>
+  <%= link_to "Least Reviewed", books_path(sort: :reviews, order: :asc) %>
 </nav>
 
 <div id="books">
