--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,8 +14,8 @@
 
   <body>
     <div class="topnav">
-      <a class="active" href="#home">Home</a>
-      <a href="#books">Books</a>
+      <a class="active" href="/">Home</a>
+      <a href="/books">Books</a>
     </div>
     <%= yield %>
   </body>
