--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,6 +7,7 @@
   <%= link_to "Lowest Page Count", books_path(sort: :pages, order: :asc) %>
   <%= link_to "Most Reviewed", books_path(sort: :reviews, order: :desc) %>
   <%= link_to "Least Reviewed", books_path(sort: :reviews, order: :asc) %>
+  <%= link_to "Add a Book", new_book_path %>
 </nav>
 
   <section id="book-statistics">
