--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,33 @@
 <h1><%= @user.name %>Show Page</<h1>
-  <section id="sort-links">
+  <section id="show-links">
     <%= link_to "Newest Reviews", user_path(@user, sort: :asc) %>
     <%= link_to "Oldest Reviews", user_path(@user, sort: :desc) %>
     </section>
-  <section>
+  <section id="review-list">
     <h2><%= @user.name %>'s Reviews</h2>
     <% if @sort_reviews == nil %>
-    <ul id="reviews">
-      <% @user.reviews.each do |review| %>
+    <% @user.reviews.each do |review| %>
+    <ul id="review-<%= review.id %>">
       <li><%= review.book.title %></li>
       <li><img class="review_img" src="<%= review.book.cover_image %>"></li>
       <p><%= review.title %></p>
       <li><%= review.rating %></li>
       <li><%= review.description %></li>
       <p>Review created at: <%= review.created_at %></p>
-      <% end %>
+      <%= link_to "Delete Review" %>
     </ul>
+    <% end %>
     <% else %>
-    <ul id="reviews">
-      <% @sort_reviews.each do |review| %>
+    <% @sort_reviews.each do |review| %>
+    <ul id="review-<%= review.id %>">
       <li><%= review.book.title %></li>
       <li><img class="review_img" src="<%= review.book.cover_image %>"></li>
       <p><%= review.title %></p>
       <li><%= review.rating %></li>
       <li><%= review.description %></li>
       <p>Review created at: <%= review.created_at %></p>
-      <% end %>
+      <%= link_to "Delete Review" %>
     </ul>
+    <% end %>
     <% end %>
   </section>
