all instances of book titles are links to a show page

--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -4,7 +4,7 @@
   <% @author.books.each do |book| %>
   <ul id="book-<%= book.id %>">
     <li>
-    <%= book.title %>
+    <%= link_to book.title, book_path(book) %>
     </li>
       <%= book.top_review.first.title %>
       <p><%= book.top_review.first.rating %></p>
