--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @book.title %> Show Page</h1>
 <section id="review-link">
   <%= link_to "Add a Review", new_book_review_path(@book) %>
-
+  <%= link_to "Delete Book", book_path(@book), method: :delete %>
 </section>
 <section>
   <ul>
