--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,15 @@
 <h1><%= @user.name %> Show Page</<h1>
   <section id="show-links">
-    <%= link_to "Newest Reviews", user_path(@user, sort: :asc) %>
-    <%= link_to "Oldest Reviews", user_path(@user, sort: :desc) %>
+    <%= link_to "Newest Reviews", user_path(@user, sort: :desc) %>
+    <%= link_to "Oldest Reviews", user_path(@user, sort: :asc) %>
     </section>
+
   <section id="review-list">
     <h2><%= @user.name %>'s Reviews</h2>
+
     <% if @sort_reviews == nil %>
     <% @user.reviews.each do |review| %>
+
     <ul id="review-<%= review.id %>">
       <li><%= link_to review.book.title, book_path(review.book) %></li>
       <li><img class="review_img" src="<%= review.book.cover_image %>"></li>
@@ -16,8 +19,10 @@
       <p>Review created at: <%= review.created_at %></p>
       <%= link_to "Delete Review", book_review_path(review.id, review.user_id), method: :delete %>
     </ul>
+
     <% end %>
     <% else %>
+
     <% @sort_reviews.each do |review| %>
     <ul id="review-<%= review.id %>">
       <li><%= link_to review.book.title, book_path(review.book) %></li>
@@ -28,6 +33,8 @@
       <p>Review created at: <%= review.created_at %></p>
       <%= link_to "Delete Review", book_review_path(review.id, review.user_id), method: :delete %>
     </ul>
+
     <% end %>
     <% end %>
+    
   </section>
