Adds default value to form

--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -9,7 +9,7 @@
   <%= f.number_field :year %>
 
   <%= f.label :cover_image %>
-  <%= f.text_field :cover_image %>
+  <%= f.text_field :cover_image, value: "https://ibf.org/site_assets/img/placeholder-book-cover-default.png" %>
 
   <%= f.label :authors %>
   <%= f.text_field :authors %>
